Fixed: Address issues with the status being wrong color on the index and movie details (not tracking anything queued/downloading)
Fixed: Updated fetchQueueDetails() to not pass movie ids since the store doesn't use them anyways
New: Added text to index poster progress bar showing status

#4525
#4526
#4982

--- a/frontend/src/Movie/Index/MovieIndexFooter.css
+++ b/frontend/src/Movie/Index/MovieIndexFooter.css
@@ -18,6 +18,12 @@
   border-radius: 4px;
 }
 
+.queue {
+  composes: legendItemColor;
+
+  background-color: $queueColor;
+}
+
 .continuing {
   composes: legendItemColor;
 
